Updated Macaroon support to not parse macaroons, just use serialized data. The reason is that LND updated to V2 Macaroons which isn't supported by JMacaroons currently.